--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- <link rel="stylesheet" href="../css/bootstrap.css"> -->
   <link rel="stylesheet" href="/css/bootstrap.css">
   <link rel="stylesheet" href="../css/fontello.css">
-  <link rel="stylesheet" href="../css/outline.css">
+  <!-- <link rel="stylesheet" href="../css/outline.css"> -->
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/fonts.css">
   <link rel="stylesheet" href="../css/style.css">
@@ -70,11 +70,11 @@
       </div>
     </div>
   </header>
-  <main>
-    <section class="section-offset immunity">
+  <main >
+    <section class="section-offset immunity container-relative">
       <div class="container">
         <div class="row">
-          <div class="col-12">
+          <div class="col-12 d-flex">
             <h1 class="immunity__title">Активируй иммунитет!</h1>
           </div>
         </div>
@@ -91,6 +91,45 @@
             <p class="immunity__descr-small mt-1">
               Вашему организму во время пандемии и сезонных простуд
             </p>
+          </div>
+        </div>
+      </div>
+      <!-- <div class="b-img">
+        <img src="img/Mask Group.png" class="img-fluid" alt="">
+    </div> -->
+    </section>
+
+    <section class="section-offset buy">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h2 class="buy__title text-center">ПОЛУЧИ ЗАЩИТУ ИММУНИТЕТА <br><span class="title-orange">СО СКИДКОЙ -15% ПЕРВЫМ!</span></h2>
+          </div>
+        </div>
+        <div class="row mt-4 mt-lg-5">
+          <div class="col-12 text-center">
+            <p class="price-descr">
+              <span class="price-descr-through">750</span> 690₽
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 col-12 buy__item mt-3 text-center d-flex flex-column align-items-center justify-content-center">
+            <img src="/img/ItemGinger.png" alt="ItemGinger" class="img-fluid item__img-small">
+            <p class="item__descr mt-2 item__descr-small">Содержит <br><span class="item__span">имбирь</span></p>
+          </div>
+          <div class="col-md-4 col-12 buy__item mt-3 text-center d-flex flex-column align-items-center justify-content-center">
+            <img src="/img/ItemNootris.png" alt="ItemNootris" class="img-fluid item__img">
+            <p class="item__descr mt-2">+ Бесплатная доставка <br><span class="item__span">Специальная цена</span></p>
+          </div>
+          <div class="col-md-4 col-12 buy__item mt-3 text-center d-flex flex-column align-items-center justify-content-center">
+            <img src="/img/ItemVorus.png" alt="ItemVorus" class="img-fluid item__img-small">
+            <p class="item__descr mt-2 item__descr-small">Нейтрализует <br><span class="item__span">вирусы</span></p>
+          </div>
+        </div>
+        <div class="row mt-2">
+          <div class="col-12 text-center">
+            <a href="#" class="btn btn-warning " role="button">Оформить заказ!</a>
           </div>
         </div>
       </div>
