--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-7">
+          <div class="col-5">
             <p class="immunity__descr">
               Всего пять секунд в день помогут укрепить иммунитет и повысить защитные силы организма
             </p>
           </div>
         </div>
         <div class="row">
-          <div class="col-4">
+          <div class="col-3">
             <h3 class="immunity__title-small mt-3 mt-lg-5">nootres помогает</h3>
             <p class="immunity__descr-small mt-1">
               Вашему организму во время пандемии и сезонных простуд
@@ -94,9 +94,9 @@
           </div>
         </div>
       </div>
-      <!-- <div class="b-img">
-        <img src="img/Mask Group.png" class="img-fluid" alt="">
-    </div> -->
+      <div class="b-img">
+        <img src="/img/MaskGroup.png" class="immunity-bg__img" alt="">
+    </div>
     </section>
 
     <section class="section-offset buy">
